Added prepublish script

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
+    "prepublish": "tsc",
     "lint:ts": "prettier --check \"src/**/*.ts\"",
     "lint:ts:fix": "prettier --write \"src/**/*.ts\""
   },
