--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "prepublish": "tsc",
+    "preversion": "npm run build",
     "lint:ts": "prettier --check \"src/**/*.ts\"",
     "lint:ts:fix": "prettier --write \"src/**/*.ts\""
   },
