--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@fastnloud/nest-mail",
   "version": "0.0.4",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "preversion": "npm run build",
