--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@fastnloud/nest-mail",
   "version": "0.0.9",
-  "description": "Mail module for Nest using Nodemailer to desliver messages.",
+  "description": "Mail module for Nest that uses Nodemailer to deliver messages.",
   "homepage": "https://github.com/fastnloud/nest-mail#readme",
   "main": "dist/index.js",
   "scripts": {
