--- a/package.json
+++ b/package.json
@@ -4,11 +4,32 @@
   "description": "Mail module for Nest that uses Nodemailer to deliver messages.",
   "homepage": "https://github.com/fastnloud/nest-mail#readme",
   "main": "dist/index.js",
+  "author": "jaap",
+  "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "preversion": "npm run build",
     "lint:ts": "prettier --check \"src/**/*.ts\"",
-    "lint:ts:fix": "prettier --write \"src/**/*.ts\""
+    "lint:ts:fix": "prettier --write \"src/**/*.ts\"",
+    "prebuild": "rimraf dist",
+    "preversion": "npm run build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/fastnloud/nest-mail.git"
+  },
+  "dependencies": {
+    "@nestjs/common": "^9.3.12",
+    "@nestjs/config": "^2.3.1",
+    "joi": "^17.9.1",
+    "nodemailer": "^6.9.1"
+  },
+  "devDependencies": {
+    "@types/node": "^18.15.11",
+    "@types/nodemailer": "^6.4.7",
+    "prettier": "^2.8.7",
+    "prettier-plugin-organize-imports": "^3.2.2",
+    "rimraf": "^4.4.1",
+    "typescript": "^5.0.2"
   },
   "keywords": [
     "nest",
@@ -16,23 +37,6 @@
     "smtp transporter",
     "nodemailer"
   ],
-  "author": "jaap",
-  "license": "MIT",
-  "dependencies": {
-    "@nestjs/config": "^2.3.1",
-    "joi": "^17.9.1",
-    "nodemailer": "^6.9.1"
-  },
-  "devDependencies": {
-    "@types/nodemailer": "^6.4.7",
-    "prettier": "^2.8.7",
-    "prettier-plugin-organize-imports": "^3.2.2",
-    "typescript": "^5.0.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/fastnloud/nest-mail.git"
-  },
   "files": [
     "dist/**/*"
   ]
