Updated release scripts

--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "lint:ts": "prettier --check \"src/**/*.ts\"",
-    "lint:ts:fix": "prettier --write \"src/**/*.ts\"",
+    "prettier": "prettier --check \"src/**/*.ts\"",
+    "prettier:fix": "prettier --write \"src/**/*.ts\"",
     "prebuild": "rimraf dist",
+    "prepublishOnly": "npm run build",
     "preversion": "npm run build"
   },
   "repository": {
