--- a/package.json
+++ b/package.json
@@ -19,20 +19,21 @@
     "url": "https://github.com/fastnloud/nest-mail.git"
   },
   "dependencies": {
-    "joi": "^17.9.1",
-    "nodemailer": "^6.9.1"
+    "joi": "^17.9.2",
+    "nodemailer": "^6.9.3"
   },
   "peerDependencies": {
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/config": "^2.0.0"
+    "@nestjs/common": "^9.0.0 || ^10.0.0",
+    "@nestjs/config": "^2.0.0 || ^3.0.0"
   },
   "devDependencies": {
-    "@types/node": "^18.15.11",
-    "@types/nodemailer": "^6.4.7",
-    "prettier": "^2.8.7",
+    "@types/node": "^18.0.0",
+    "@types/nodemailer": "^6.4.8",
+    "npm-check-updates": "^16.10.13",
+    "prettier": "^2.8.8",
     "prettier-plugin-organize-imports": "^3.2.2",
-    "rimraf": "^4.4.1",
-    "typescript": "^5.0.2"
+    "rimraf": "^5.0.1",
+    "typescript": "^5.1.6"
   },
   "keywords": [
     "nest",
